# django-cloud

./: .gitignore  README.md  pyproject.toml  requirements.txt
django_cloud/: __init__.py  state.py
django_cloud/server/: admin.py  apps.py  metrics.py  models.py  server.py  urls.py  views.py
django_cloud/server/static/django_cloud/: metrics.css  metrics.js
django_cloud/server/templates/django_cloud/: metrics.html
django_cloud/service/: __init__.py  apps.py  service.py
tests/: install-test.sh
tests/server/demo/management/commands/: createtestdata.py
tests/server/server/: settings.py  urls.py
tests/service/demo/: urls.py  views.py
tests/service/service/: settings.py  urls.py
